# ip2region-xdb

./: .gitignore  .last_upstream_release  README.md  download_mmdb.sh  go.mod  location.json  pyproject.toml
.github/workflows/: Search.yml  download-location.yml  trigger-on-upstream.yml  update-xdb.yml
data/: 内网IP.txt
scripts/: build_mmdb.go  build_mmdb.py  多级查询.go  简单查询.go
src/ip2region_xdb/: __init__.py  __main__.py  converter.py
