[project]
name = "ip2region-xdb"
version = "0.1.0"
description = "Convert GeoLite2 mmdb to ip2region xdb format"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "maxminddb>=2.0.0",
]

[project.scripts]
convert = "ip2region_xdb.converter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ip2region_xdb"]
